@@ -4,7 +4,6 @@ v0.8
 + In slideshow mode, pre-load next image so the user-specified delay is accurate
 + Documentation
 + Bookmarks (Bookmark Image, Bookmark List, Manage (to create files))
-+ Preference - go fullscreen when you start slideshow
 + put slideshow button on toolbar?
 
 Future
