@@ -1,4 +1,5 @@
 v0.8 - Pending
+	+ Preference to automatically start the slideshow in fullscreen mode
 	+ Added cli argument: -s or --slideshow to start in slideshow mode
 	+ Added cli argument: -f or --fullscreen to start in fullscreen mode
 	+ Additional shortcuts: +/- for zooming in/out (Bjoern Martensen)
